--- a/frontend/home.html
+++ b/frontend/home.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Playwrite+DK+Loopet:wght@100..400&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/all.min.css"/>
 </head>
-
+  
 <body>
   <section class="header">
     <nav>
@@ -36,10 +36,20 @@
   </section>
 
   <!-----------services selection-------->
-  <section id="Services" class="py-16-grap-100">
+  <section id="Services" class="py-16-gray-100">
     <div class="container mx-auto px-4">
-      <h2 class="tetx-3xlfont-bold text-center mb-12">Our<span class="text-gray-500">Services</span></h2>
+      <h2 class="text-3xlfont-bold text-center mb-12"> About <span class="text-gray-500"> Us</span></h2>
       <div class="text-3xl font-bold text-center mb-12"></div>
+
+      <p class = "text-gray-700 mb-4">Founded in (date) by (Owner) ,JC Panel Beaters has grown from a small garage to a trusted auto body shop in (my area).What started as a one-man operation developed into a team of (skilled workers and technicaions) to service our beloved customers </p>
+      <p class ="text-gray-900 mb-4"> We take pride in our craftmemship and attention to detail.Each vehicle that comes through our dooes receies the same level or care and precision ,wheather it's a minor dent or major collison.</p>
+  
+        
+        </div>
+        </div>
+      </div>
+      <div class="row grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
+
 
       <h1>Services & Product We Offer</h1>
       <p>High-end panel beating services for your auto mobile to look brand new</p>
